fix: text align
- round two of some reorganization shenanigans

--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,4 @@
 #root {
-  text-align: center;
   height: 100dvh;
   width: 100dvw;
 }
